| Bug #3401 | Rare replication bug which leads to "Binlog has bad magic number" from slave | ||
|---|---|---|---|
| Submitted: | 6 Apr 2004 18:12 | Modified: | 6 Apr 2004 18:16 |
| Reporter: | Guilhem Bichot | ||
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 4.0 | OS: | Any (all) |
| Assigned to: | Target Version: | ||
[6 Apr 2004 18:12]
Guilhem Bichot
[6 Apr 2004 18:16]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Fixed in ChangeSet@1.1771, 2004-04-07 01:14:11+02:00, guilhem@mysql.com
