Fix for BUG#3401 "Rare replication bug which leads to "Binlog has bad magic number" from slave": Backport of a part of this changeset of 4.1: ChangeSet@1.1753.1.1, 2004-04-05 13:56:05+03:00, monty@mysql.com which fixes the bug.

sql/slave.cc:
  even if mi is already inited (replication already run once before),
  we need to seek back to the beginning of the relay log to be able
  to later check the binlog's magic number.